[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/screens/controls/screen_controls.gd" type="Script" id=1]
[ext_resource path="res://src/screens/controls/binding_popup.gd" type="Script" id=2]
[ext_resource path="res://src/fonts/BigFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/screens/controls/input.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/fonts/NormalFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/styles/button_normal.tres" type="StyleBox" id=6]

[sub_resource type="Theme" id=1]
resource_local_to_scene = true
default_font = ExtResource( 5 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = ExtResource( 6 )
Button/styles/pressed = null

[sub_resource type="Theme" id=2]
resource_local_to_scene = true
default_font = ExtResource( 5 )
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = ExtResource( 6 )
Button/styles/pressed = null

[node name="screen_controls" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -44.0
margin_top = 10.0
margin_right = 44.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="move_up_inputs" parent="UI/Panel/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 0.0
margin_bottom = 25.0
theme = SubResource( 1 )

[node name="move_down_inputs" parent="UI/Panel/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 45.0
margin_bottom = 70.0
theme = SubResource( 2 )

[node name="move_right_inputs" parent="UI/Panel/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 90.0
margin_bottom = 115.0
theme = SubResource( 2 )

[node name="move_left_inputs" parent="UI/Panel/VBoxContainer" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 135.0
margin_bottom = 160.0
theme = SubResource( 2 )

[node name="binding_popup" type="PopupDialog" parent="UI"]
margin_right = 160.0
margin_bottom = 160.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/binding_popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.5
margin_top = -7.0
margin_right = 43.5
margin_bottom = 7.0
text = "Type on a key"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="key_pressed" from="UI/binding_popup" to="." method="_on_binding_popup_key_pressed"]
